--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,65 @@
+apt-xapian-index==0.49
 asgiref==3.3.1
+astroid==2.4.2
+blinker==1.4
 certifi==2020.12.5
 chardet==4.0.0
+Click==7.0
+colorama==0.4.3
+command-not-found==0.3
+cryptography==2.8
+cupshelpers==1.0
+dbus-python==1.2.16
+distro==1.4.0
+distro-info===0.23ubuntu1
 Django==3.1.4
+entrypoints==0.3
+gpg===1.13.1-unknown
+httplib2==0.14.0
 idna==2.10
+isort==5.7.0
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+netifaces==0.10.4
+oauthlib==3.1.0
+olefile==0.46
+pexpect==4.6.0
+Pillow==7.0.0
+pycairo==1.16.2
+pycrypto==2.6.1
+pycups==1.9.73
+PyGObject==3.36.0
+PyJWT==1.7.1
+pylint==2.6.0
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+PyQt5==5.14.1
+python-apt==2.0.0+ubuntu0.20.4.3
+python-debian===0.1.36ubuntu1
 pytz==2020.5
+PyYAML==5.3.1
+reportlab==3.5.34
 requests==2.25.1
+requests-unixsocket==0.2.0
+screen-resolution-extra==0.0.0
+SecretStorage==2.3.1
+simplejson==3.16.0
+sip==4.19.21
+six==1.14.0
 sqlparse==0.4.1
+systemd-python==234
+toml==0.10.2
+ubuntu-advantage-tools==20.3
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
 urllib3==1.26.2
+usb-creator==0.3.7
+wadllib==1.3.3
+wrapt==1.12.1
+xkit==0.0.0
