--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ PowProducer/snowview/__pycache__/views.cpython-38.pyc
 PowProducer/snowview/__pycache__/urls.cpython-38.pyc
 PowProducer/snowview/__pycache__/__init__.cpython-38.pyc
 PowProducer/PowProducer/__pycache__/wsgi.cpython-38.pyc
+
+.env
