--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ PyNaCl==1.3.0
 PyQt5==5.14.1
 python-apt==2.0.0+ubuntu0.20.4.3
 python-debian===0.1.36ubuntu1
+python-dotenv==0.15.0
 pytz==2020.5
 PyYAML==5.3.1
 reportlab==3.5.34
