--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,14 @@
-Package       Version
-------------- ---------
-asgiref       3.3.1
-certifi       2020.12.5
-chardet       4.0.0
-Django        3.1.5
-idna          2.10
-pip           20.3.3
-pkg-resources 0.0.0
-PyJWT         2.0.0
-pytz          2020.5
-requests      2.25.1
-setuptools    44.0.0
-six           1.15.0
-sqlparse      0.4.1
-twilio        6.50.1
-urllib3       1.26.2
+asgiref==3.3.1
+certifi==2020.12.5
+chardet==4.0.0
+Django==3.1.5
+idna==2.10
+pkg-resources==0.0.0
+PyJWT==2.0.0
+python-dotenv==0.15.0
+pytz==2020.5
+requests==2.25.1
+six==1.15.0
+sqlparse==0.4.1
+twilio==6.50.1
+urllib3==1.26.2
